--- a/bootstrap.css
+++ b/bootstrap.css
@@ -22,7 +22,7 @@ html, body {
 #fbicon {
 	position:relative;
 	top: 9px;	
-	padding-left: 360px;
+	padding-left: 40%;
 }
 #twittericon {
 	position:relative;
@@ -30,16 +30,16 @@ html, body {
 }
 #linkedinicon {
 	position:relative;
-	left: 10px;
+	left: 1%;
 	top: -1px;
 }
 #githubicon {
 	position:relative;
-	left: 20px;
+	left: 1.5%;
 }
 #angellisticon {
 	position: relative;
-	left: 20px;
+	left: 1.5%;
 	top: 4px;
 }
 #descriptionholder {
