--- a/bootstrap.css
+++ b/bootstrap.css
@@ -14,7 +14,6 @@ html, body {
 	height: auto;
 }
 #TopSpan {
-	font-size: 30px;
 	position: relative;
 	top: -15px;
 }
@@ -22,37 +21,24 @@ html, body {
 #fbicon {
 	position:relative;
 	top: 9px;	
-	padding-left: 40%;
+	left: 20%;
 }
 #twittericon {
 	position:relative;
-	top: 1px
+	top: 1px;
+	left: 23%
 }
 #linkedinicon {
 	position:relative;
-	left: 1%;
+	left: 26%;
 	top: -1px;
 }
 #githubicon {
 	position:relative;
-	left: 1.5%;
+	left: 29%;
 }
 #angellisticon {
 	position: relative;
-	left: 1.5%;
-	top: 4px;
-}
-#descriptionholder {
-	position:relative;
-	top:-35px;
-	background-color:white;
-	width:100%;
-	height: 480px;
-}
-#boxholder {
-	background-color:black;
-	width:100%;
-	height:1050px;
-	position:relative;
-	top:-80px;
+	left: 32%;
+	top: 2px;
 }
