--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -42,7 +42,7 @@ p {
 =======================*/
 
 .first-section {
-	background-image: url(../img/first-section-bg.jpg);
+	background-image: url(../img/wallpaper.jpg);
 	background-size: cover;
 	width: 100%;
 	background-repeat: no-repeat;
